fix resizeable small cleanup code

--- a/src/main/resources/fxml/mainWindow.fxml
+++ b/src/main/resources/fxml/mainWindow.fxml
@@ -1,70 +1,87 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<Pane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.kil.view.controller.MainWindowController">
-    <children>
-        <VBox>
+<BorderPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.kil.view.controller.MainWindowController">
+    <center>
+        <SplitPane dividerPositions="0.5" orientation="VERTICAL">
+            <items>
+                <TextArea fx:id="codeArea"/>
+                <TextArea fx:id="consoleArea" editable="false"/>
+            </items>
+        </SplitPane>
+    </center>
+    <top>
+        <VBox BorderPane.alignment="CENTER">
             <children>
-                <MenuBar>
-                    <menus>
-                        <Menu mnemonicParsing="false" text="Файл">
-                            <items>
-                                <MenuItem mnemonicParsing="false" onAction="#newProject" text="Создать"/>
-                                <MenuItem mnemonicParsing="false" onAction="#openProject" text="Открыть"/>
-                                <MenuItem mnemonicParsing="false" onAction="#saveProject" text="Сохранить"/>
-                                <MenuItem mnemonicParsing="false" onAction="#saveProjectAs" text="Сохранить как"/>
-                                <MenuItem mnemonicParsing="false" onAction="#exit" text="Выход"/>
-                            </items>
-                        </Menu>
-                        <Menu mnemonicParsing="false" text="Правка">
-                            <items>
-                                <MenuItem mnemonicParsing="false" onAction="#undo" text="Отменить"/>
-                                <MenuItem mnemonicParsing="false" onAction="#redo" text="Повторить"/>
-                                <MenuItem mnemonicParsing="false" onAction="#cut" text="Вырезать"/>
-                                <MenuItem mnemonicParsing="false" onAction="#copy" text="Копировать"/>
-                                <MenuItem mnemonicParsing="false" onAction="#paste" text="Вставить"/>
-                                <MenuItem mnemonicParsing="false" onAction="#delete" text="Удалить"/>
-                                <MenuItem mnemonicParsing="false" onAction="#selectAll" text="Выделить все"/>
-                            </items>
-                        </Menu>
-                        <Menu mnemonicParsing="false" text="Текст">
-                            <items>
-                                <MenuItem mnemonicParsing="false" onAction="#showTaskDescription"
-                                          text="Постановка задачи"/>
-                                <MenuItem mnemonicParsing="false" onAction="#showGrammar" text="Грамматика"/>
-                                <MenuItem mnemonicParsing="false" onAction="#showGrammarClassification"
-                                          text="Классификация Грамматики"/>
-                                <MenuItem mnemonicParsing="false" onAction="#showAnalyzeMethod" text="Метод анализа"/>
-                                <MenuItem mnemonicParsing="false" onAction="#showErrorDiagnosticAndFix"
-                                          text="Диагностика и нейтрализация ошибок"/>
-                                <MenuItem mnemonicParsing="false" onAction="#showExample" text="Тестовый пример"/>
-                                <MenuItem mnemonicParsing="false" onAction="#showLiteratureList"
-                                          text="Список литературы"/>
-                                <MenuItem mnemonicParsing="false" onAction="#showSourceCode"
-                                          text="Исходный код программы"/>
-                            </items>
-                        </Menu>
-                        <Menu mnemonicParsing="false" text="Пуск">
-                            <items>
-                                <MenuItem mnemonicParsing="false" onAction="#findCardByRegex"
-                                          text="поиск карты через regex"/>
-                                <MenuItem mnemonicParsing="false" onAction="#findCardByState"
-                                          text="поиск карты через состояния"/>
-                                <MenuItem mnemonicParsing="false" onAction="#compile" text="скомпилировать"/>
-                            </items>
-                        </Menu>
-                        <Menu mnemonicParsing="false" text="Справка">
-                            <items>
-                                <MenuItem mnemonicParsing="false" onAction="#showReference" text="Вызов справки"/>
-                                <MenuItem mnemonicParsing="false" onAction="#showAboutApp" text="О программе"/>
-                            </items>
-                        </Menu>
-                    </menus>
-                </MenuBar>
-                <HBox VBox.vgrow="ALWAYS">
+                <HBox>
+                    <children>
+                        <MenuBar HBox.hgrow="ALWAYS">
+                            <menus>
+                                <Menu mnemonicParsing="false" text="Файл">
+                                    <items>
+                                        <MenuItem mnemonicParsing="false" onAction="#newProject" text="Создать"/>
+                                        <MenuItem mnemonicParsing="false" onAction="#openProject" text="Открыть"/>
+                                        <MenuItem mnemonicParsing="false" onAction="#saveProject" text="Сохранить"/>
+                                        <MenuItem mnemonicParsing="false" onAction="#saveProjectAs"
+                                                  text="Сохранить как"/>
+                                        <MenuItem mnemonicParsing="false" onAction="#exit" text="Выход"/>
+                                    </items>
+                                </Menu>
+                                <Menu mnemonicParsing="false" text="Правка">
+                                    <items>
+                                        <MenuItem mnemonicParsing="false" onAction="#undo" text="Отменить"/>
+                                        <MenuItem mnemonicParsing="false" onAction="#redo" text="Повторить"/>
+                                        <MenuItem mnemonicParsing="false" onAction="#cut" text="Вырезать"/>
+                                        <MenuItem mnemonicParsing="false" onAction="#copy" text="Копировать"/>
+                                        <MenuItem mnemonicParsing="false" onAction="#paste" text="Вставить"/>
+                                        <MenuItem mnemonicParsing="false" onAction="#delete" text="Удалить"/>
+                                        <MenuItem mnemonicParsing="false" onAction="#selectAll" text="Выделить все"/>
+                                    </items>
+                                </Menu>
+                                <Menu mnemonicParsing="false" text="Текст">
+                                    <items>
+                                        <MenuItem mnemonicParsing="false" onAction="#showTaskDescription"
+                                                  text="Постановка задачи"/>
+                                        <MenuItem mnemonicParsing="false" onAction="#showGrammar" text="Грамматика"/>
+                                        <MenuItem mnemonicParsing="false" onAction="#showGrammarClassification"
+                                                  text="Классификация Грамматики"/>
+                                        <MenuItem mnemonicParsing="false" onAction="#showAnalyzeMethod"
+                                                  text="Метод анализа"/>
+                                        <MenuItem mnemonicParsing="false" onAction="#showErrorDiagnosticAndFix"
+                                                  text="Диагностика и нейтрализация ошибок"/>
+                                        <MenuItem mnemonicParsing="false" onAction="#showExample"
+                                                  text="Тестовый пример"/>
+                                        <MenuItem mnemonicParsing="false" onAction="#showLiteratureList"
+                                                  text="Список литературы"/>
+                                        <MenuItem mnemonicParsing="false" onAction="#showSourceCode"
+                                                  text="Исходный код программы"/>
+                                    </items>
+                                </Menu>
+                                <Menu mnemonicParsing="false" text="Пуск">
+                                    <items>
+                                        <MenuItem mnemonicParsing="false" onAction="#findCardByRegex"
+                                                  text="поиск карты через regex"/>
+                                        <MenuItem mnemonicParsing="false" onAction="#findCardByState"
+                                                  text="поиск карты через состояния"/>
+                                        <MenuItem mnemonicParsing="false" onAction="#compile" text="скомпилировать"/>
+                                    </items>
+                                </Menu>
+                                <Menu mnemonicParsing="false" text="Справка">
+                                    <items>
+                                        <MenuItem mnemonicParsing="false" onAction="#showReference"
+                                                  text="Вызов справки"/>
+                                        <MenuItem mnemonicParsing="false" onAction="#showAboutApp" text="О программе"/>
+                                    </items>
+                                </Menu>
+                            </menus>
+                        </MenuBar>
+                    </children>
+                </HBox>
+                <HBox>
                     <children>
                         <Button fx:id="buttonNew" mnemonicParsing="false" onAction="#newProject" HBox.hgrow="ALWAYS">
                             <HBox.margin>
@@ -108,17 +125,8 @@
                             </HBox.margin>
                         </Button>
                     </children>
-                    <VBox.margin>
-                        <Insets/>
-                    </VBox.margin>
                 </HBox>
-                <SplitPane dividerPositions="0.5" orientation="VERTICAL">
-                    <items>
-                        <TextArea fx:id="codeArea"/>
-                        <TextArea fx:id="consoleArea" editable="false"/>
-                    </items>
-                </SplitPane>
             </children>
         </VBox>
-    </children>
-</Pane>
+    </top>
+</BorderPane>
